src/App.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');

*{
    margin: 0;
    padding: 0;
    font-family: "Poppins", sans-serif;
}

html {
    overflow-x: hidden;
    scroll-behavior: smooth;
  }



.header  {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    height: 9vh;
    align-items: center;
    width: 100vw;
    position: fixed;
    top: 0;
    z-index: 1;
}

.page-title {
    text-decoration: none;
}



.header .right {
    width: 27%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.header .right a {
    text-decoration: none;
    color: #1c1c1c;
    transition: 0.3s ease-in-out all;
}

.header .right a:hover{
    color: #5b3be9;
    font-weight: 600;
    letter-spacing: 0.5px;
}

.header .right img {
    width: 25px;
    transition: 0.5s ease-in-out all;
}

.halfSunMoon {
    cursor: pointer;
    width: 25px;
}

.setTheme-button{
    transition: 0.1s ease all;
}

.header .right img:hover {
    transform: rotate(180deg);
}

.home {
    display: flex;
    flex-direction: row;
    padding-top: 6vh;
}

.home .left {
    width: 30vw;
    padding: 40px;
    padding-top: 4vh;
    margin-left: 10vw;
}

.home .title {
    font-size: 32px;
    margin-left: 3%;
}

.home .description {
    width: 85%;
}

.home  .description h3 {
    font-weight: 300;
    font-size: 16px;
    margin-top: 2vh;
}

.home .button-hire-me .button {
    background-color: #8063ff;
    border: none;
    padding: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 1vh;
    width: 5vw;
    font-size: 14px;
    text-decoration: none;
    border-radius: 6px;
    margin-top: 3vh;
    color: #eaeaea;
    font-weight: 700;
    cursor: pointer;
    transition: all ease-in-out 0.3s;
}

.home .button-hire-me .button:hover{
    background-color: #5b3be9;
    letter-spacing: 0.5px;
}

.mobile-row {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 50%;
}

.home .right{
    display: flex;
    width: 50vw;
}

.profile-pic{
    position: relative;
    z-index: 0;
}

.home .links-home {
    width: 20vw;
    margin-left: 25vw;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.home .profile-img{
    width: 30vw;
    border-radius: 50%;
    margin: 0% 10%;    
    margin-top: 3vh;
}

.profile-img {
    transition: all ease-in-out 60s;
}

.profile-img:hover{
    transform: rotate(720deg);
}

.home .links-home img {
    border-radius: 0%;
    width: 2vw;
    filter: invert(100%) sepia(5%) saturate(1151%) hue-rotate(259deg) brightness(113%) contrast(84%);
    transition: 0.3s ease all;
}

.home .links-home img:hover {
    filter: invert(0%) sepia(2%) saturate(3091%) hue-rotate(340deg) brightness(99%) contrast(78%);
}

.home .background-circle {
    position: absolute;
    height: 100vh;
    width: 100vw;
    margin-left: -47vw;
    margin-top: -47.25vw;
    background: #5b3be9;
    clip-path: circle(40% at 90% 100%);
    z-index: -1;
}

.content {
    margin: 5vw 7vw;
    padding: 3vw;
    width: 80vw;
    border-radius: 2vw;
    transition: 0.3s ease all;
}

.content:hover{
    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
}

.content .title {
    color:#5b3be9;
    margin-bottom: 2vh;
    margin-left: 15px;
}

.aboutme-content .infos-about-me {
    font-weight: 400;
}

.skills-content{
    display: flex;
    flex-direction: column;
}

.skills-content h4 {
    font-size: 18px;
    font-weight: 500;
}

.content-list {
    display: flex;
    width: 100%;
    justify-content: space-around;
    flex-direction: row;
    margin-top: 15px;
}

.content-item {
    display: flex;
    flex-direction: column;
    width: 220px;
    justify-content: baseline;
    text-align: center;
    align-items: center;
    transition: 0.1s ease all;
    cursor: pointer;
}

.content-item:hover {
    filter: invert(22%) sepia(99%) saturate(3875%) hue-rotate(248deg) brightness(93%) contrast(96%);
    font-weight: 700;
}

.content-item img {
    width: 20px;
    justify-content: center;
}

.bigger-img {
    height: 18px;
}

.soft-skills-label {
    margin-top: 6vh;
}

.works {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.row {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin-top: 40px;
}

.project {
    height: 380px;
    width: 300px;
    border-radius: 20%;
    background-color: #eaeaea;
    display: flex;
    flex-direction: column;
    align-items: center;
    transition: 0.3s ease-in all;
}


.project h4 {
    margin-top: 30px;
    font-size: 20px;
    color:#5b3be9;
}

.project p {
    width: 80%;
}

.project a {
    background-color: #8063ff;
    padding: 5px 10px;
    text-decoration: none;
    color: #eaeaea;
    font-weight: 700;
    border-radius: 6px;
    transition: 0.3s ease all;
    margin-top: 20px;
    margin-left: -40%;
    margin-bottom: 40px;
}

.project a:hover{
    background-color: #5b3be9;
}

.project img{
    width: 45px;
    margin: 6px 0px;
}

.form {
    margin-top: 30px;
}

.form h4 {
    font-size: 18px;
    font-weight: 500;
}

.form div {
    margin-top: 15px;
}

.form input, .form textarea {
    width: 90%;
    margin-left: 5%;
    padding: 10px;
    outline: none;
    margin-top: 5px;
    border: none;
    border-radius: 6px;
    transition: 0.3s ease-in-out all;
}

.form input:focus, .form textarea:focus{
    border: 1.5px solid #5b3be9;
}

.button-div {
    width: 90%;
    display: flex;
    justify-content: flex-end;
}

.submit-button {
    background-color: #8063ff;
    padding: 10px 15px;
    text-decoration: none;
    color: #eaeaea;
    font-weight: 700;
    border-radius: 6px;
    transition: 0.3s ease all;
    cursor: pointer;
    border: none;
    margin-top: 20px;
    display: flex;
    justify-content: flex-end;
}

.submit-button:hover {
    background-color: #5b3be9;
}

.social-medias-links {
    display: flex;
    width: 50%;
    justify-content: space-around;
    margin: 10px
}

.social-medias-links img {
    width: 3vw;
    transition: 0.15s ease all;
}

.social-medias-links img:hover {
    filter: invert(22%) sepia(99%) saturate(3875%) hue-rotate(248deg) brightness(93%) contrast(96%);
}

@media (max-width: 800px) {
    .form {
      display: none;
    }

    body{
        overflow-x: hidden;
        display: flex;
        justify-content: center;
        flex-direction: column;
    }

    .works

    .row {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        margin-top: 0px;
    }

    .content-list{
        display: flex;
        flex-direction: column;
    }

    .mobile-row {
        display: flex;
        flex-direction: row;
        width: 100%;
        justify-content: space-around;
        height: 20vh;
        align-items: center;
    }

    .mobile-row:first-child{
        margin-top: 5vh;
    }

    .mobile-row div {
        width: 33%;
        text-align: center;
    }
    
    .mobile-row div:nth-child(2){
        margin-top: -20vh;
    }
    .home .button-hire-me .button {
        padding: 5vw 10vw;
    }

    .content {
        width: 75vw;
        justify-content: center;
        align-items: center;
        padding: 20px 20px;
    }

    .header .right{
        display: none;
    }

    .home .background-circle{
        height: 50vw;
    }

    .home{
        display: flex;
        flex-direction: row;
    }

    .home .right{
        margin-top: 30vh;
    }

    .home .links-home{
        display: none;

    }

    .home .background-circle {
        clip-path: circle(40% at 100% 100%);
    }
    
    .project{
        margin: 2vh 0vh;
        padding: 0px 0px 20px 0px;
    }

    .content .title {
        margin-bottom: 0vh;
    }

    .social-medias-links {
        display: flex;
        width: 92%;
        justify-content: space-around;
    }

    .social-medias-links img {
        width: 40px;
    }

    .mobile-links{
        display: flex;
        flex-direction: column;
        align-items: flex-end;
        margin-top: -3vh;
        margin-right: -5vw;
    }

    .mobile-links img{
        width: 40px;
    }

}

@media (min-width: 800px) {
    .mobile-links{
        display: none;
    }
}

.flags{
    display: none;
}

